# skilltest

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  biome.json  deny.toml  gh-secrets.json  justfile  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.github/workflows/: bundle-smoke.yml  ci.yml  e2e-claude.yml  e2e-codex.yml  e2e-copilot.yml  e2e-crush.yml  e2e-cursor.yml  e2e-goose.yml  e2e-judge-api.yml  e2e-opencode.yml  e2e-qwen.yml  pr-title.yml  publish.yml  release.yml  semantic-release.yml
crates/skilltest-cli/: Cargo.toml  project.json
crates/skilltest-cli/src/: cli.rs  main.rs  scaffold.rs
crates/skilltest-cli/tests/: e2e.rs  live.rs  live_api_judge.rs
crates/skilltest-core/: Cargo.toml  project.json
crates/skilltest-core/src/: config.rs  conversation.rs  error.rs  eval.rs  exit.rs  lib.rs  provider.rs  report.rs  runner.rs  skill.rs  testcase.rs
docs/: development.md  e2e.md  protocol.md  schema.md
examples/: skilltest.yaml
plugins/pytest/: README.md  project.json  pyproject.toml
plugins/pytest/skilltest_pytest/: __init__.py  errors.py  models.py  plugin.py  runner.py
plugins/pytest/tests/: conftest.py  test_api.py  test_plugin.py
plugins/pytest/tests/collected/: greet.skilltest.yaml
plugins/pytest/tests/collected/greeter/: SKILL.md
plugins/vitest/: README.md  biome.json  package.json  pnpm-lock.yaml  project.json
plugins/vitest/src/: index.ts  schema.ts  vitest.ts
plugins/vitest/tests/: api.test.ts  discover.test.ts  failure.test.ts  helpers.ts  integration.test.ts  reexport.test.ts
plugins/vitest/tests/collected/: greet.skilltest.yaml
plugins/vitest/tests/collected/greeter/: SKILL.md
plugins/vitest/tests/failing/: farewell.case.mts  vitest.config.ts
schemas/: report.schema.json  validation.schema.json
scripts/: build-python-dist.sh  build-python-wheel.sh  e2e-harness.sh  e2e-lib.sh  gen-contract.sh  install-oneharness.sh  install.sh  set-version.sh  smoke-npm-bundle.sh  smoke-python-bundle.sh  stage-npm-binary.sh
sdks/python/: README.md  project.json  pyproject.toml
sdks/python/skilltest_sdk/: __init__.py  _report.py  _validation.py  errors.py  models.py  runner.py
sdks/python/tests/: conftest.py  test_api.py  test_contract.py  test_resolve.py
sdks/typescript/: README.md  package.json  project.json  tsconfig.json
sdks/typescript/src/: errors.ts  helpers.ts  index.ts  runner.ts  schema.ts
sdks/typescript/tests/: api.test.ts  contract.test.ts  helpers.ts  resolve.test.ts
tests/: AGENTS.md
tests/fixtures/cases/: booking_multiturn.yaml  greet_fail.yaml  greet_numeric.yaml  greet_pass.yaml
tests/fixtures/live/cases/: multiturn.yaml  pong.yaml  smoke.yaml
tests/fixtures/live/skills/echo-ok/: SKILL.md
tests/fixtures/live/skills/pong/: SKILL.md
tests/fixtures/skills/invalid/: SKILL.md
tests/fixtures/smoke/: greet.skilltest.yaml
tests/fixtures/smoke/greeter/: SKILL.md
