[workspace]
resolver = "2"
members = ["crates/skilltest-core", "crates/skilltest-cli"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/nickderobertis/skilltest"
authors = ["Nick DeRobertis"]

[workspace.dependencies]
skilltest-core = { path = "crates/skilltest-core", version = "0.1.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
serde_yaml = "0.9"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[profile.dev]
# Faster incremental e2e runs; the e2e suite spawns the binary many times.
opt-level = 0
