[package]
name = "skilltest-core"
description = "Core library for skilltest: run AI skills on harness/model platforms and score transcripts with natural-language evals."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints.clippy]
all = { level = "deny", priority = -1 }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
