[project]
name = "skilltest-pytest"
version = "0.3.0"
description = "pytest integration for skilltest: auto-collect *.skilltest.yaml cases as pytest tests, built on skilltest-sdk."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Nick DeRobertis" }]
dependencies = [
    "skilltest-sdk==0.3.0",
    "pytest>=8",
]

[project.entry-points.pytest11]
skilltest = "skilltest_pytest.plugin"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "ty>=0.0.1a1",
]

[tool.uv.sources]
skilltest-sdk = { path = "../../sdks/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skilltest_pytest"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
